Add Facebook authentication

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -25,7 +25,7 @@
               <%= link_to 'Help', root_path, 'data-turbolinks': false %>
             </li>
             <li>
-              <%= link_to 'Legal & Privacy', root_path, 'data-turbolinks': false %>
+              <%= link_to 'Legal & Privacy', 'https://www.freeprivacypolicy.com/privacy/view/db74f6110ccafc17745acd47d2e83f0d', 'data-turbolinks': false %>
             </li>
           </ul>
         </div>
