--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -46,19 +46,26 @@
         <div class="column is-4">
           <span class="is-size-4 has-text-weight-semibold">Social</span>
           <ul class="mt-16 mb-16">
+            <%# <li> %>
+              <%# <%= link_to 'Twitter', root_path, 'data-turbolinks': false %>
+            <%# </li> %>
             <li>
-              <%= link_to 'Twitter', root_path, 'data-turbolinks': false %>
+              <%= link_to 'Facebook', 'https://www.facebook.com/eloreapp/', 'data-turbolinks': false %>
             </li>
             <li>
-              <%= link_to 'Facebook', root_path, 'data-turbolinks': false %>
-            </li>
-            <li>
-              <%= link_to 'Instagram', root_path, 'data-turbolinks': false %>
+              <%= link_to 'Instagram', 'https://www.instagram.com/eloreapp/', 'data-turbolinks': false %>
             </li>
           </ul>
         </div>
       </div>
+      <hr />
+      <div class="columns">
+        <div class="column is-12">
+          <p class="has-text-grey-light is-size-7">
+            &copy; 2018 Elore. All Rights Reserved.
+          </p>
+        </div>
+      </div>
     </div>
-    <p></p>
   </div>
 </footer>
