--- a/app/assets/stylesheets/vendors.scss
+++ b/app/assets/stylesheets/vendors.scss
@@ -3,9 +3,13 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .card-vendor {
+  -webkit-box-shadow: 0px 3px 8px -4px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px 3px 8px -4px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 3px 8px -4px rgba(0, 0, 0, 0.15);
+
   &:hover {
-    -webkit-box-shadow: 0 5px 6px rgba(10, 10, 10, .2), 0 0 0 1px rgba(10, 10, 10, .2);
-    -moz-box-shadow: 0 5px 6px rgba(10, 10, 10, .2), 0 0 0 1px rgba(10, 10, 10, .2);
-    box-shadow: 0 5px 6px rgba(10, 10, 10, .2), 0 0 0 1px rgba(10, 10, 10, .2);
+    -webkit-box-shadow: 0 22px 43px rgba(10, 10, 10, .15);
+    -moz-box-shadow: 0 22px 43px rgba(10, 10, 10, .15);
+    box-shadow: 0 22px 43px rgba(10, 10, 10, .15);
   }
 }
