--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar is-dark is-fixed-top" role="navigation" aria-label="main navigation">
+<nav class="navbar is-transparent is-fixed-top" role="navigation" aria-label="main navigation">
   <div class="container">
     <div class="navbar-brand">
       <%= link_to root_path, class: 'navbar-item', 'data-turbolinks': false do %>
@@ -46,10 +46,15 @@
           </div>
         <% else %>
           <div class="navbar-item has-dropdown is-hoverable">
-            <a class="navbar-link">
-              <%= current_user[:name] %>
+            <a class="navbar-link" data-turbolinks="false">
+              <figure class="image">
+                <img src="<%= current_user[:image] %>" class="is-rounded">
+              </figure>
             </a>
             <div class="navbar-dropdown">
+              <%= link_to root_path, class: 'navbar-item', 'data-turbolinks': false do %>
+                <%= icon( 'fas', 'user-circle' ) %> <span class="ml-8"><%= current_user[:name] %></span>
+              <% end %>
               <%= link_to new_vendor_path, class: 'navbar-item', 'data-turbolinks': false do %>
                 <%= icon( 'fas', 'plus' ) %> <span class="ml-8">Add Vendor</span>
               <% end %>
