--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -19,7 +19,7 @@
           <span class="is-size-4 has-text-weight-semibold">Company</span>
           <ul class="mt-16 mb-16">
             <li>
-              <%= link_to 'About', root_path, 'data-turbolinks': false %>
+              <%= link_to 'About', static_pages_about_path, 'data-turbolinks': false %>
             </li>
             <li>
               <%= link_to 'Help', root_path, 'data-turbolinks': false %>
