--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,25 +1,46 @@
-<h2>Sign up</h2>
+<section class="hero is-fullheight">
+  <div class="hero-body">
+    <div class="container has-text-centered">
+      <div class="column is-4 is-offset-4">
+        <h3 class="title has-text-grey">Register</h3>
+        <p class="subtitle has-text-grey">Please login to proceed.</p>
+        <div class="box">
+          <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+            <%= f.error_notification %>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+            <div class="field">
+              <div class="control">
+                <%= f.input_field :email, placeholder: 'Email Address', required: true, autofocus: true, class: 'input', input_html: { autocomplete: "email" }%>
+              </div>
+            </div>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true ,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
+            <div class="field">
+              <div class="control">
+                <%= f.input_field :password, placeholder: 'Password', required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), class: 'input', input_html: { autocomplete: "new-password" } %>
+              </div>
+            </div>
+
+            <div class="field">
+              <div class="control">
+                <%= f.input_field :password_confirmation, placeholder: 'Password Confirmation', required: true, class: 'input', input_html: { autocomplete: "new-password" } %>
+              </div>
+            </div>
+
+            <div class="form-actions">
+              <%= f.button :submit, "Register", class: 'button custom-is-primary is-fullwidth' %>
+            </div>
+            
+            <hr class="hr-text" data-content="OR" />
+
+            <%- if devise_mapping.omniauthable? %>
+              <%- resource_class.omniauth_providers.each do |provider| %>
+                <%= link_to "Log in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), class: 'button is-fb-button is-fullwidth' %>
+              <% end -%>
+            <% end -%>
+          <% end %>
+        </div>
+        <%= render "devise/shared/links" %>
+      </div>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</section>
