--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,32 +1,51 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<section class="hero is-fullheight">
+  <div class="hero-body">
+    <div class="container has-text-centered">
+      <div class="column is-4 is-offset-4">
+        <h2 class="title has-text-grey">Edit <%= resource_name.to_s.humanize %></h2>
+        <div class="box">
+          <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+            <%= f.error_notification %>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+            <div class="field">
+              <div class="control">
+                <%= f.input_field :email, required: true, autofocus: true, class: 'input' %>
+              </div>
+            </div>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+            <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+              <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+            <% end %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
+            <div class="field">
+              <div class="control">
+                <%= f.input_field :password, hint: "leave it blank if you don't want to change it", class: 'input', required: false, input_html: { autocomplete: "new-password" } %>
+              </div>
+            </div>
 
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
+            <div class="field">
+              <div class="control">
+                <%= f.input_field :password_confirmation, required: false, class: 'input', input_html: { autocomplete: "new-password" } %>
+              </div>
+            </div>
+
+            <div class="field">
+              <div class="control'">
+                <%= f.input_field :current_password, hint: "we need your current password to confirm your changes", required: true, class: 'input', input_html: { autocomplete: "current-password" } %>
+              </div>
+            </div>
+
+            <div class="form-actions">
+              <%= f.button :submit, "Update", class: 'button custom-is-primary' %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
   </div>
+</section>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
-<% end %>
+
 
 <h3>Cancel my account</h3>
 
