Update navbar button to be responsive in mobile

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -33,7 +33,7 @@
           <div class="navbar-item">
             <div class="buttons">
               <%# <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path, class: 'button custom-is-primary', 'data-turbolinks': false %>
-              <%= link_to "Get Started", new_user_session_path, class: 'button custom-is-primary', 'data-turbolinks': false %>
+              <%= link_to "Get Started", new_user_session_path, class: 'button custom-is-primary is-mobile-button', 'data-turbolinks': false %>
             </div>
           </div>
         <% else %>
