--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,12 @@
 //   background-color: #fafafa;
 // }
 
+// Box
+
+.box {
+  border-radius: 0;
+}
+
 // Buttons
 
 .is-fb-button {
@@ -275,6 +281,7 @@
   text-align: center;
   height: 1.5em;
   opacity: .5;
+  background-color: transparent;
 
   &:before {
     content: '';
