--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,6 +10,12 @@
 
             <div class="field">
               <div class="control">
+                <%= f.input_field :username, placeholder: 'Username', required: true, autofocus: true, class: 'input' %>
+              </div>
+            </div>
+
+            <div class="field">
+              <div class="control">
                 <%= f.input_field :email, placeholder: 'Email Address', required: true, autofocus: true, class: 'input', input_html: { autocomplete: "email" }%>
               </div>
             </div>
