--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<section class="hero is-fullheight">
+<section class="hero is-medium">
   <div class="hero-body">
     <div class="container has-text-centered">
       <div class="column is-4 is-offset-4">
@@ -6,6 +6,34 @@
         <div class="box">
           <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
             <%= f.error_notification %>
+
+            <div class="field mt-16">
+              <p class="help has-text-black">Image Preview</p>
+              <figure class="image is-96x96 mb-16 border-1">
+                <img id="img-prev" src="#" class="is-invisible" />
+              </figure>
+              <div class="file">
+                <label class="file-label">
+                  <%= f.file_field :avatar, class: 'file-input', id: 'image-upload' %>
+                  <span class="file-cta">
+                    <span class="file-icon">
+                      <%= icon( 'fas', 'upload' ) %>
+                    </span>
+                    <span class="file-label">
+                      Choose a file
+                    </span>
+                  </span>
+                </label>
+              </div>
+
+              <%= f.hidden_field :avatar_cache %>
+            </div>
+
+            <div class="field">
+              <div class="control">
+                <%= f.input_field :username, placeholder: 'Username', required: true, autofocus: true, class: 'input' %>
+              </div>
+            </div>
 
             <div class="field">
               <div class="control">
@@ -19,36 +47,33 @@
 
             <div class="field">
               <div class="control">
-                <%= f.input_field :password, hint: "leave it blank if you don't want to change it", class: 'input', required: false, input_html: { autocomplete: "new-password" } %>
+                <%= f.input_field :password, placeholder: 'New Password', hint: "leave it blank if you don't want to change it", class: 'input', required: false, input_html: { autocomplete: "new-password" } %>
               </div>
             </div>
 
             <div class="field">
               <div class="control">
-                <%= f.input_field :password_confirmation, required: false, class: 'input', input_html: { autocomplete: "new-password" } %>
+                <%= f.input_field :password_confirmation, placeholder: 'Confirm New Password', required: false, class: 'input', input_html: { autocomplete: "new-password" } %>
               </div>
             </div>
 
             <div class="field">
               <div class="control'">
-                <%= f.input_field :current_password, hint: "we need your current password to confirm your changes", required: true, class: 'input', input_html: { autocomplete: "current-password" } %>
+                <%= f.input_field :current_password, placeholder: 'Current Password', hint: "we need your current password to confirm your changes", required: true, class: 'input', input_html: { autocomplete: "current-password" } %>
               </div>
             </div>
 
             <div class="form-actions">
-              <%= f.button :submit, "Update", class: 'button custom-is-primary' %>
+              <%= f.button :submit, "Update", class: 'button custom-is-primary mt-32 is-fullwidth' %>
             </div>
           <% end %>
         </div>
+        <%# <h3>Cancel my account</h3> %>
+
+        <p>Cancel my Account? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+
+        <%# <%= link_to "Back", :back %>
       </div>
     </div>
   </div>
 </section>
-
-
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
