--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,15 +12,19 @@
           </figure>
 
           <% if @user.provider == 'facebook' %>
-            <h1 class="title">@<%= @user[:name] %></h1>
+            <h1 class="title">
+              @<%= @user[:name] %>
+            </h1>
           <% else %>
-            <h1 class="title">@<%= @user.username %></h1>
+            <h1 class="title">
+              <%= @user.full_name %>
+            </h1>
           <% end %>
 
           <% if current_user == @user %>
-            <%= link_to 'Edit Profile', edit_user_registration_path, class: 'button is-dark' %>
+            <%= link_to 'Edit Profile', edit_user_registration_path, class: 'button is-dark', 'data-turbolinks': false %>
           <% else %>
-            <%= link_to 'Follow', root_path, class: 'button is-dark' %>
+            <%= link_to 'Follow', root_path, class: 'button is-dark', 'data-turbolinks': false %>
           <% end %>
 
         </div>
@@ -32,10 +36,10 @@
 <section class="section is-light">
   <div class="container">
     <div class="columns is-multiline">
-      <% if current_user.vendors.empty? %>
+      <% if @user.vendors.empty? %>
         <%= render 'vendors/empty' %>
       <% else %>
-        <% current_user.vendors.each do |vendor| %>
+        <% @user.vendors.each do |vendor| %>
           <div class="column is-3 mt-16">
             <%= link_to vendor_path(vendor), 'data-turbolinks': false do %>
               <div class="card card-vendor is-borderless">
@@ -62,7 +66,7 @@
                   <%= link_to root_path, class: 'card-footer-item', 'data-turbolinks': false do %>
                     <%= icon( 'far', 'bookmark' ) %>
                   <% end %>
-                  <% if current_user %>
+                  <% if current_user == @user %>
                     <%= link_to edit_vendor_path( vendor.id ), class: 'card-footer-item', 'data-turbolinks': false do %>
                       <%= icon( 'far', 'edit' ) %>
                     <% end %>
